# testing

./: CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt
Google_tests/movie_tests/: CMakeLists.txt  CustomerTest.cpp
movie/: CMakeLists.txt  Customer.cpp  Customer.h  CustomerDb.cpp  CustomerDb.h  Movie.cpp  Movie.h  Rental.cpp  Rental.h  SimpleUi.cpp  SimpleUi.h  UiInterface.h
rf-tests/: CMakeLists.txt  MovieLibrary.py  movie-interface.cpp  movie-rental-tests.txt
